# SARDINE_Experiments

./: .gitignore  README.md  baselines.py  gen_datasets.py  plot.py  pyproject.toml  train.py
agents/: ddpg.py  hac.py  reinforce.py  sac.py  state_encoders.py  topk_reinforce.py
agents/wrappers/: __init__.py  gems.py  ideal_state.py  topk.py
click_models/: cm.py  naive.py  pbm.py
config/: reinforce_obs.yml  reinforce_pomdp.yml  singleitem-boredinf-DDPG-TopKIdeal.yml  singleitem-boredinf-SAC-TopKIdeal.yml  singleitem-partialobs-SAC-TopKIdeal-GRU.yml  singleitem-partialobs-SAC-TopKIdeal-Transformer.yml  singleitem-static-DDPG-TopKIdeal.yml  singleitem-static-SAC-TopKIdeal.yml  singleitem-uncertain-DDPG-TopKIdeal.yml  singleitem-uncertain-SAC-TopKIdeal.yml  slatererank-bored-REINFORCE-TopK.yml  slatererank-bored-SAC-TopKIdeal.yml  slatetopk-bored-DDPG-TopKIdeal.yml  slatetopk-bored-HAC-Ideal.yml  slatetopk-bored-SAC-TopKIdeal.yml  slatetopk-boredinf-DDPG-TopKIdeal.yml  slatetopk-boredinf-HAC-Ideal.yml  slatetopk-boredinf-SAC-TopKIdeal.yml  slatetopk-partialobs-DDPG-TopKIdeal-GRU.yml  slatetopk-partialobs-HAC-Ideal-GRU.yml  slatetopk-partialobs-SAC-TopKIdeal-GRU.yml  slatetopk-uncertain-SAC-TopKIdeal-Transformer.yml  topk_reinforce_obs.yml
config/click_models/: train_cm.yml
config/gems/: sac_gems_obs.yml  topK-Bored.yml
config/old/: ddpg_topkideal_obs.yml  ddpg_topkideal_pomdp.yml  hac_ideal_obs.yml  hac_ideal_pomdp.yml  sac_topkideal_obs.yml  (+2 more)
gems/: __init__.py  gems.py  models.py
sardine/: __init__.py  consts.py  simulator.py
utils/: file.py  parser.py
(+6 files in other folders)
